--- a/.eslintrc
+++ b/.eslintrc
@@ -4,17 +4,17 @@
         "es2021": true
     },
     "extends": [
-        "plugin:@typescript-eslint/recommended",
+//        "plugin:@typescript-eslint/recommended",
         "plugin:react-hooks/recommended",
         "plugin:react/recommended",
         "plugin:import/errors",
         "plugin:import/warnings",
-        "plugin:import/typescript",
-        "google",
+//        "plugin:import/typescript",
+//        "google",
         "plugin:prettier/recommended",
         "prettier"
     ],
-    "parser": "@typescript-eslint/parser",
+//    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -24,7 +24,6 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint",
         "prettier"
     ],
     "rules": {
