--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/lab": "^5.0.0-alpha.88",
-        "@mui/material": "^5.8.6",
-        "@mui/styles": "^5.8.6",
-        "@mui/system": "^5.8.6",
-        "@mui/utils": "^5.8.6",
+        "@mui/material": "5.11.2",
+        "@mui/styles": "5.11.2",
+        "@mui/system": "5.11.2",
+        "@mui/utils": "5.11.2",
+        "@mui/x-date-pickers": "5.0.13",
         "@reduxjs/toolkit": "^1.9.1",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
