--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,7 @@
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "jsx-a11y/no-static-element-interactions": 0,
         "no-multiple-empty-lines": ["error", { "max": 2 }],
-        "linebreak-style": ["error", "unix"],
+//        "linebreak-style": ["error", "windows"],
         "import/no-unresolved": "off",
         "new-cap": "off",
         "no-console": 0,
