--- a/.eslintrc
+++ b/.eslintrc
@@ -9,12 +9,12 @@
         "plugin:react/recommended",
         "plugin:import/errors",
         "plugin:import/warnings",
-//        "plugin:import/typescript",
+        "plugin:import/typescript",
 //        "google",
         "plugin:prettier/recommended",
         "prettier"
     ],
-//    "parser": "@typescript-eslint/parser",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
