--- a/package.json
+++ b/package.json
@@ -67,6 +67,10 @@
         "@babel/core": "^7.18.6",
         "@babel/eslint-parser": "^7.18.2",
         "@babel/preset-react": "^7.18.6",
+        "@types/jest": "^29.2.6",
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
         "eslint": "^8.19.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -81,6 +85,7 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "4.6.0",
         "prettier": "^2.7.1",
-        "sass": "^1.53.0"
+        "sass": "^1.53.0",
+        "typescript": "^4.9.4"
     }
 }
