added queries register and login

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@reduxjs/toolkit": "^1.9.1",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
+        "axios": "^1.2.4",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "material-ui-popup-state": "^4.0.1",
@@ -27,6 +28,7 @@
         "react-dom": "^18.2.0",
         "react-input-mask": "^2.0.4",
         "react-perfect-scrollbar": "^1.5.8",
+        "react-query": "^3.39.2",
         "react-redux": "^8.0.2",
         "react-router": "6.3.0",
         "react-router-dom": "6.3.0",
