--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "berry-material-react-free",
     "version": "3.2.0",
     "private": true,
-    "homepage": "https://berrydashboard.io/free",
+    "homepage": "https://berrydashboard.io",
     "dependencies": {
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.9.3",
@@ -28,7 +28,7 @@
         "react-dom": "^18.2.0",
         "react-input-mask": "^2.0.4",
         "react-perfect-scrollbar": "^1.5.8",
-        "react-query": "^3.39.2",
+        "react-query": "3.21.0",
         "react-redux": "^8.0.2",
         "react-router": "6.3.0",
         "react-router-dom": "6.3.0",
