--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
         "axios": "^1.2.4",
+        "date-fns": "^2.29.3",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "material-ui-popup-state": "^4.0.1",
